# llvm-pass-development-scripts

./: README.md  clone_and_install_llvm.sh  download_and_install_llvm.sh  test_pass.sh  test_program.cpp
lib/: CMakeLists.txt  HelloWorldLibrary.cpp  HelloWorldLibrary.hpp
pass/: CMakeLists.txt  test_pass.sh  test_program.cpp
pass/HelloWorldPass/: CMakeLists.txt  HelloWorldPass.cpp
